# esphome-subzero-ble

./: .gitignore  README.adoc  cove-minimal-dishwasher.yaml  secrets-example.yaml  subzero.yaml  subzero_appliance.yaml  subzero_base.yaml  subzero_dishwasher.yaml  subzero_fridge.yaml  subzero_range.yaml  wolf-minimal-fridge.yaml  wolf-minimal-range.yaml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: ci.yml  release.yml
components/patch_acl_reassembly/: __init__.py  patch_acl_reassembly.py.script
components/subzero_appliance/: __init__.py  appliance.h  appliance_base.cpp  appliance_base.h  ble_transport.h  dishwasher_hub.h  esp_idf_transport.h  fridge_hub.h  hub.cpp  hub.h  range_hub.h
components/subzero_protocol/: buffer.cpp  buffer.h  commands.h  dispatch.h  dispatch_esphome.h  gatt_handles.h  gatt_handles_esphome.h  log_sanitize.cpp  log_sanitize.h  poll_state.h  protocol.cpp  protocol.h
docs/: advanced.adoc  ble-protocol.adoc
tests/cpp/: CMakeLists.txt  buffer_test.cpp  commands_test.cpp  dispatch_test.cpp  gatt_handles_test.cpp  hub_test.cpp  hub_test_helpers.h  lifecycle_guards_test.cpp  poll_state_test.cpp  protocol_test.cpp  sanitize_test.cpp
tests/fixtures/: README.md  dishwasher_push_wash_cycle_started.expected.json  dishwasher_push_wash_cycle_started.json  fridge_back_2028_d5_full.expected.json  fridge_deu2450wdz_wine_only_d6_full.expected.json  fridge_deu2450wdz_wine_only_d6_full.json  fridge_pro3650g_d4_full.expected.json  fridge_pro3650g_d4_full.json  fridge_push_air_filter_expired_msg4.expected.json  fridge_push_air_filter_expired_msg4.json  range_lacking_properties_d6.json  range_push_msg_types_1_diagnostic_status.expected.json  range_push_msg_types_1_diagnostic_status.json  range_push_oven_preheat_complete.expected.json  range_push_oven_preheat_complete.json
